# ariitk_template

./: README.md  setup.sh  task.sh
scripts/: ariitk_create_lib  ariitk_create_metapkg  ariitk_create_pkg  ariitk_pkg  ariitk_rosinstall  parse_yaml.py  rosinstall.sh  task.sh
scripts/cfg/: config.sh  config.yaml  test.sh
scripts/parse_yaml/test/: cpp_bindings.cpp
scripts/test_scripts/: test.sh  test_yaml
scripts/test_scripts/parse_yaml/test/: config.yaml
template_pkg/: CMakeLists.txt  package.xml
template_pkg/include/template_pkg/: template_pkg_node_name.hpp
template_pkg/launch/: default.launch
template_pkg/src/: template_pkg_node_name.cpp  template_pkg_node_name_node.cpp
