<?xml version="1.0"?>
<package format="2">
    <name>template_pkg_name</name>
    <version>0.0.0</version>
    <description>The template_pkg_name package</description>

    <maintainer email="email_id">user_name</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>roscpp</build_depend>

</package>